src/test/deca/context/invalid/void-variable-declaration.deca
// Description:
//    Condition de la règle 3.17 non respectée 
//
// Resultats:
//    Erreur contextuelle
//    Ligne 10 : A variable can't be void (rule 3.17)
//

{
    void x;
}
